feat: metadata creation
