# src/server/routes/router.ts
@@ -4,7 +4,7 @@ import { Handlers } from '../handlers';
 
 const buildRoutes = ({ statusHandler, metadataHandler }: Handlers, server: Express) => {
   server.get('/health', statusHandler.getStatus);
-  server.get('/random', metadataHandler.getRandomObject);
+  server.post('/metadata', metadataHandler.createObject);
 };
 
 export default buildRoutes;
