# swagger.yaml
@@ -18,6 +18,21 @@ paths:
                 $ref: '#/components/schemas/Healthcheck'
         '500':
           description: Server unavailable
+  /metadata:
+    post:
+      summary: Metada object creation
+      operationId: metadata-creation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MetadataCreationBody'
+        required: true
+      responses:
+        '201':
+          description: Metadata object created
+        '500':
+          description: Server unavailable
 components:
   schemas:
     Healthcheck:
@@ -26,3 +41,73 @@ components:
         up:
           type: boolean
           example: true
+    MetadataCreationBody:
+      type: object
+      required: ['subject']
+      additionalProperties:
+        type: object
+        required: ['value', 'sequenceNumber', 'signatures']
+        properties:
+          value:
+            type: object
+          sequenceNumber:
+            type: number
+          signatures:
+            type: array
+            items:
+              type: object
+              required: ['publicKey', 'signature']
+              properties:
+                publicKey:
+                  type: string
+                  format: base16
+                  minLength: 64
+                  maxLength: 64
+                signature:
+                  type: string
+                  format: base16
+                  minLength: 128
+                  maxLength: 128
+      properties:
+        subject:
+          type: string
+          minLength: 1
+          maxLength: 255
+        policy:
+          type: string
+          format: base16
+          minLength: 56
+          maxLength: 120
+        preimage:
+          type: object
+          requiredProperties: ['alg', 'msg']
+          properties:
+            alg:
+              type: string
+              enum: ['sha1', 'sha', 'sha3', 'blake2b', 'blake2s', 'keccak', 'md5']
+            msg:
+              type: string
+              encoding: base16
+        name:
+          type: string
+          maxLength: 50
+          minLength: 1
+        description:
+          type: string
+          maxLength: 500
+        ticker:
+          type: string
+          maxLength: 9
+          minLength: 2
+        decimals:
+          type: integer
+          minimum: 1
+          maximum: 19
+        url:
+          type: string
+          format: uri
+          maxLength: 250
+        logo:
+          type: string
+          format: base64
+          maxLength: 87400
